# Javaab-ai

./: .gitignore  DECISIONS.md  LICENSE.md  README.md
backend/: conftest.py  pyproject.toml
backend/app/: main.py  models.py  session.py  upload_pipeline.py
backend/app/api/: _serialize.py  cleaning_routes.py  deps.py  metrics_routes.py  query_routes.py  schema_routes.py  schemas.py  session_routes.py  upload_routes.py
backend/app/engines/: canonical.py  cleaning.py  execute.py  guardrail.py  ingest.py  insight.py  interpret.py  joins.py  nl2sql.py  orchestrator.py  profiler.py  schema_ai.py  schema_contract.py
backend/app/llm/: __init__.py  base.py  fallback.py  gemini.py  groq.py
backend/tests/: FIXTURES_SPEC.md  README.md  _harness.py  _make_large.py  _mock_llm.py  conftest.py  make_fixtures.py  test_canonical_audit.py  test_case_normalization.py  test_cleaning.py  test_cleaning_audit.py  test_ingest_audit.py  test_joins_audit.py  test_llm_fallback.py  test_phase2.py  test_phase3.py  test_phase3_integration_live.py  test_phase3_live.py  test_phase3_multihop.py  test_phase4_api.py  test_profiler_audit.py  test_stress_multihop_live.py
backend/tests/fixtures/: 01_clean.csv  02a_customers.csv  02b_orders.csv  03_currency.csv  04_dates.csv  05_nulls.csv  06_coded_headers.csv  07_banner.csv  08_canonicalize.csv  09_near_dupes.csv  10_multisheet.xlsx  10_nested.json  11_single_col.csv  12_latin1.csv  12_utf16.csv
backend/tests/fixtures_audit/: _generate.py
backend/tests/fixtures_audit/01_clean_basic/: data.csv
frontend/: package-lock.json  package.json  (+2 more)
(+49 files in other folders)
