[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "javaab-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
    "duckdb>=0.10.3",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "charset-normalizer>=3.3.2",
    "rapidfuzz>=3.9.0",
    "sqlglot>=23.0.0",
    "python-dateutil>=2.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# the live tier hits a real model; exclude it from the normal run.
# run it explicitly with: pytest -m live
addopts = "-m 'not live'"
